# ctl-multisign-mre

./: .gitignore  README.md  flake.nix
offchain/: package-lock.json  package.json  packages.dhall  spago-packages.nix  spago.dhall
offchain/src/: MultiSign.purs  ScriptsFFI.js  ScriptsFFI.purs  Test.purs  Utils.purs
onchain/: ctl-multisign-mre-onchain.cabal
onchain/exporter/: Main.hs
onchain/src/: MultiSign.hs
onchain/src/Data/: Result.hs
onchain/src/PlutusTx/: Show.hs
